--- a/public/mypolls.html
+++ b/public/mypolls.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>Voting App</title>
-		<link href="css/main.css" rel="stylesheet" type="text/css">
+		<link href="/public/css/main.css" rel="stylesheet" type="text/css">
 		<script
 			src="https://code.jquery.com/jquery-3.2.1.min.js"
 			integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -18,7 +18,7 @@
 			<a id="newpoll-a" class="show" href="/newpoll">New Poll</a>
 			<a id="signout-a" class="show" href="/signout">Signout</a>
 		</div>
-		<script type="text/javascript" src="/app/controllers/navController.js"></script>
+		<script type="text/javascript" src="/controllers/navController.js"></script>
 		<script type="text/javascript">loggedIn(<%= logged %>)</script>
 	</header>
 	<body>
