--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
 	<head>
 		<title>Voting App</title>
 		<link href="/public/css/main.css" rel="stylesheet" type="text/css">
+		<link href="/public/css/index.css" rel="stylesheet" type="text/css">
+		<link href="/public/css/poll.css" rel="stylesheet" type="text/css">
 		<script
 			src="https://code.jquery.com/jquery-3.2.1.min.js"
 			integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -19,11 +21,12 @@
 			<a id="signout-a" class="show" href="/signout">Signout</a>
 		</div>
 		<script type="text/javascript" src="/controllers/navController.js"></script>
-		<script type="text/javascript">loggedIn(<%= logged %>)</script>
+		<script type="text/javascript">loggedIn(<%= logged %>);</script>
 	</header>
 	<body>
 		<div id="content">
-			<h1>Polls</h1>
+			<%- htmlStr %>
 		</div>
+		<script type="text/javascript" src="/controllers/indexController.js"></script>
 	</body>
 </html>
