--- a/public/newpoll.html
+++ b/public/newpoll.html
@@ -23,7 +23,23 @@
 	</header>
 	<body>
 		<div id="content">
-			<h1>New Poll</h1>
+			<div id="new-poll">
+				<form action="/newpoll/submit" id="newpoll-form" method="post">
+					<input type="text" id="title" name="title" placeholder="Title here."><br>
+					<textarea id="options" required wrap="hard" name="options"
+						placeholder="Put options here and seperate them in comma"
+						rows="4" cols="50"></textarea><br>
+					<input type="submit" value="Submit">
+				</form>
+				<!--
+				<input required type="text" id="title" placeholder="Title here."><br>
+				<textarea required id="options" wrap="hard"
+					placeholder="Put options here and seperate them in comma"
+					rows="4" cols="50"></textarea><br>
+				<button id="submit-btn">Submit</button>
+				-->
+			</div>
 		</div>
+		<script type="text/javascript" src="/controllers/newPollController.js"></script>
 	</body>
 </html>
