--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<title>Voting App</title>
 		<link href="/public/css/main.css" rel="stylesheet" type="text/css">
 		<link href="/public/css/index.css" rel="stylesheet" type="text/css">
-		<link href="/public/css/poll.css" rel="stylesheet" type="text/css">
+		<link href="/public/css/polldisplay.css" rel="stylesheet" type="text/css">
 		<script
 			src="https://code.jquery.com/jquery-3.2.1.min.js"
 			integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
