--- a/public/poll.html
+++ b/public/poll.html
@@ -4,11 +4,12 @@
 	<head>
 		<title>Voting App</title>
 		<link href="/public/css/main.css" rel="stylesheet" type="text/css">
-		<link href="/public/css/newpoll.css" rel="stylesheet" type="text/css">
+		<link href="/public/css/poll.css" rel="stylesheet" type="text/css">
 		<script
 			src="https://code.jquery.com/jquery-3.2.1.min.js"
 			integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 			crossorigin="anonymous"></script>
+		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 	</head>
 	<header>
 		<h1>Vote wisely! Vote now!</h1>
@@ -24,23 +25,21 @@
 	</header>
 	<body>
 		<div id="content">
-			<div id="new-poll">
-				<form action="/newpoll/submit" id="newpoll-form" method="post">
-					<input type="text" id="title" name="title" placeholder="Title here."><br>
-					<textarea id="options" required wrap="hard" name="options"
-						placeholder="Put options here and seperate them in comma"
-						rows="4" cols="50"></textarea><br>
-					<input type="submit" id="submit-btn" value="Submit">
+			<div id="chart"></div>
+			<div>
+				<form id="choices-form" method="post">
+					<div id="choices-container">
+						<span id="choices"></span>
+						<span class="option">
+							<input type="radio" name="choice" id="other-r" value="other" checked>
+							<input type="text" name="otherchoice" id="other-t" placeholder="Own option.">
+						</span>
+					</div>
+					<input type="submit" id="submit-btn" value="submit">
 				</form>
-				<!--
-				<input required type="text" id="title" placeholder="Title here."><br>
-				<textarea required id="options" wrap="hard"
-					placeholder="Put options here and seperate them in comma"
-					rows="4" cols="50"></textarea><br>
-				<button id="submit-btn">Submit</button>
-				-->
 			</div>
 		</div>
-		<script type="text/javascript" src="/controllers/newPollController.js"></script>
+		<script type="text/javascript" src="/controllers/pollController.js"></script>
+		<script type="text/javascript">setTimeout(initValues("<%-pollId%>", "<%-pollTitle%>", "<%-choicesArr%>"),25)</script>
 	</body>
 </html>
