just need to add validations

--- a/public/newpoll.html
+++ b/public/newpoll.html
@@ -26,7 +26,7 @@
 		<div id="content">
 			<div id="new-poll">
 				<form action="/newpoll/submit" id="newpoll-form" method="post">
-					<input type="text" id="title" name="title" placeholder="Title here."><br>
+					<input type="text" required id="title" name="title" placeholder="Title here."><br>
 					<textarea id="options" required wrap="hard" name="options"
 						placeholder="Put options here and seperate them in comma"
 						rows="4" cols="50"></textarea><br>
