did some css design

--- a/public/poll.html
+++ b/public/poll.html
@@ -26,12 +26,12 @@
 	<body>
 		<div id="content">
 			<div id="chart"></div>
-			<div>
+			<div id="content-wrap">
 				<form id="choices-form" method="post">
 					<div id="choices-container">
 						<span id="choices"></span>
 						<span class="option">
-							<input type="radio" name="choice" id="other-r" value="other" checked>
+							<input type="radio" class="radio" name="choice" id="other-r" value="other" checked>
 							<input type="text" name="otherchoice" id="other-t" placeholder="Own option.">
 						</span>
 					</div>
