--- a/public/poll.html
+++ b/public/poll.html
@@ -40,6 +40,6 @@
 			</div>
 		</div>
 		<script type="text/javascript" src="/controllers/pollController.js"></script>
-		<script type="text/javascript">setTimeout(initValues("<%-pollId%>", "<%-pollTitle%>", "<%-choicesArr%>"),25)</script>
+		<script type="text/javascript">initValues("<%-pollId%>", "<%-pollTitle%>", "<%-choicesArr%>")</script>
 	</body>
 </html>
