--- a/public/poll.html
+++ b/public/poll.html
@@ -40,6 +40,7 @@
 			</div>
 		</div>
 		<script type="text/javascript" src="/controllers/pollController.js"></script>
-		<script type="text/javascript">initValues("<%-pollId%>", "<%-pollTitle%>", "<%-choicesArr%>")</script>
+		<script type="text/javascript">initValues("<%-pollId%>", "<%-pollTitle%>",
+		"<%-choicesArr%>")</script>
 	</body>
 </html>
